<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="@drawable/toolbar_header" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".AtvCadastroPJ">


        <EditText
            android:id="@+id/edtRazaoSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:ems="10"
            android:hint="@string/nome"

            android:inputType="text" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/edtCNPJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="string"
            android:ems="10"
            android:hint="@string/edtCnpj"
            android:inputType="number" />


        <EditText
            android:id="@+id/edtCEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="String"
            android:ems="10"
            android:hint="@string/cep"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/edtLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="String"
            android:ems="10"
            android:hint="@string/logradouro"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtLocalidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="String"
            android:ems="20"
            android:hint="@string/localidade"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtUF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="String"
            android:ems="10"
            android:hint="@string/uf"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="text"
            android:ems="10"
            android:hint="@string/complemento"
            android:inputType="text" />


        <Button
            android:id="@+id/btnCadastrarPj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/btnCadastrarPj" />
    </LinearLayout>
</LinearLayout>